<resources>
    <string name="app_name">StrategyPattern</string>
    <string name="tv_price">sigle price</string>
    <string name="tv_amount">amount</string>
    <string name="btn_ok">OK</string>
    <string name="btn_reset">reset</string>
    <string name="tv_sum">sum price</string>

    <string-array name="Discount">
        <item>NO</item>
        <item>80%</item>
        <item>50%</item>
    </string-array>
</resources>