<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_single_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="17dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_price"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="51dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_amount"
        app:layout_constraintTop_toBottomOf="@+id/et_single_price"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="18dp"
        android:text="@string/tv_price"
        app:layout_constraintEnd_toStartOf="@+id/et_single_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="59dp"
        android:text="@string/tv_amount"
        app:layout_constraintBottom_toBottomOf="@+id/tv_discount"
        app:layout_constraintEnd_toStartOf="@+id/et_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_price"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_discount"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="29dp"
        android:text="@string/tv_amount"
        app:layout_constraintBottom_toTopOf="@+id/btn_ok"
        app:layout_constraintEnd_toStartOf="@+id/sp_discount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_amount"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="193dp"
        android:text="@string/btn_ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="40dp"
        android:text="@string/btn_reset"
        app:layout_constraintBottom_toTopOf="@+id/et_detail"
        app:layout_constraintEnd_toEndOf="@+id/sp_discount"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et_detail"
        android:layout_width="0dp"
        android:layout_height="206dp"
        android:layout_marginTop="117dp"
        android:layout_marginBottom="117dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/tv_sum"
        app:layout_constraintEnd_toEndOf="@+id/btn_reset"
        app:layout_constraintStart_toStartOf="@+id/btn_ok"
        app:layout_constraintTop_toBottomOf="@+id/tv_discount"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="108dp"
        android:text="@string/tv_sum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_sum_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="108dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_sum"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/sp_discount"
        android:layout_width="0dp"
        android:layout_height="23dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="77dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_discount"
        app:layout_constraintTop_toBottomOf="@+id/et_single_price" />

</androidx.constraintlayout.widget.ConstraintLayout>